@@ -9,13 +9,13 @@ tub_cfg = ltx2crossrefxml-tugboat.cfg
 
 # We will read all the rpi files generated by captub,
 # which we run one issue at a time.
-rpi_input = process/*.rpi
+rpi_input = dir2.process/*.rpi
 #
 # The bbl files for those articles.
-bbl_input = process/*.bbl
+bbl_input = dir2.process/*.bbl
 #
 # The output file we will eventually upload.
-xml_output = process/output.xml
+xml_output = dir2.process/output.xml
 
 $(xml_output): $(rpi_input) $(tub_cfg) force
 	$(ltx2crossrefxml) -c $(tub_cfg) $(rpi_input) --rpi-is-xml -o $@ \
